2021/4/18   Nakata Maho <maho@riken.jp> 1.0.0
            * rename debug to test
            * BLAS part is rewritten using fable completely automatically.
            * 653 LAPACK subroutines are rewriteen using fable.
               * approx. 359 routines are rewritten using fable without modifications.

2021/4/11   Nakata Maho <maho@riken.jp> 0.9.3
            * build fix for CentOS7 (AArch64)
            * Rlamch fixes for win64

2021/4/5    Nakata Maho <maho@riken.jp> 0.9.1
            * build fix for CentOS7 (x86_64, _Float128 via libquadmath)
            * build verified for CentOS8 (AArm64, _Float128 via glibc)

2021/4/1    Nakata Maho <maho@riken.jp> 0.9.0
            * Release

2021/3/16   Nakata Maho <maho@riken.jp> 0.9.0(alpha)
            * Migrate from __float128 to _Float128

2021/3/8    Nakata Maho <maho@riken.jp> 0.9.0(alpha)
            * rename from MPACK to MPLAPACK
            * rename from MBLAS to MPBLAS
            * rename from MPLAPACK to MPLAPACK

2012/12/18  Nakata Maho <maho@riken.jp> 0.8.0.
	    * Intel Xeon Phi support 
		This build is supported by
		very unusual way.
	      Please see
		misc/prepare_mpacklibs_for_mic.sh
	    and misc/build_mpack_for_mic.sh for details.
	    * build fixes.

2012/11/21  Nakata Maho <maho@riken.jp> 0.8.0.
            * Integration of CUDA code.
            * Far better benchmarking.

2012/03/25  Nakata Maho <maho@riken.jp> 0.7.0
            * Add __float128 support for gcc.
            * Many cleanups.

2012/02/14  Nakata Maho <maho@riken.jp> 0.7.0
            * We can choose which libraries to be built.
            * We build BLAS and LAPACK as well to avoid version mismatch
              or small unnecessary fixes by distributions.
            * Change file/directory layout.

2010/08/19  Nakata Maho <maho@riken.jp> 0.6.7
            * Add Rgecon etc. condition estimation.

2010/08/07  Nakata Maho <maho@riken.jp> 0.6.7
            * All files are now 2 clause BSD style license.
