@@ -4,13 +4,13 @@ if !DISABLE_REFERENCE
 SUBDIRS += reference 
 endif
 
-if ENABLE_WRAPPER
-SUBDIRS+= blaswrapper
-endif
+#if ENABLE_WRAPPER
+#SUBDIRS+= blaswrapper
+#endif
 
-if ENABLE_FORTRANWRAPPER
-SUBDIRS+= fortranwrapper
-endif
+#if ENABLE_FORTRANWRAPPER
+#SUBDIRS+= fortranwrapper
+#endif
 
 if ENABLE_TEST
 SUBDIRS+= test
