@@ -4,14 +4,6 @@ SUBDIRS = reference
 #SUBDIRS = optimized
 #endif
 
-if ENABLE_WRAPPER
-SUBDIRS+= lapackwrapper
-endif
-
-if ENABLE_FORTRANWRAPPER
-SUBDIRS+= fortranwrapper
-endif
-
 if ENABLE_TEST
 SUBDIRS+= test
 endif
