@@ -1,3 +1,8 @@
+2021/4/19   Nakata Maho <maho@riken.jp> 1.0.0
+            * 680 LAPACK subroutines are rewriteen using fable.
+              * 359 routines are rewritten using fable without modifications.
+            * remove fortranwrapper and blaswrapper
+
 2021/4/18   Nakata Maho <maho@riken.jp> 1.0.0
             * rename debug to test
             * BLAS part is rewritten using fable completely automatically.
